force-app/main/default/objects/aecm__Architecture_Strategy__c/aecm__Architecture_Strategy__c.object-meta.xml
<CustomObject>
    <description>Container for architecture strategy information and activities.</description>
    <label>Architecture Strategy</label>
    <nameField>
        <label>Architecture Strategy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Architecture Strategies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>