force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Architecture_Domain__c.field-meta.xml
<CustomField>
    <fullName>aecm__Architecture_Domain__c</fullName>
    <label>Architecture Domain</label>
    <referenceTo>aecm__Architecture_Domain__c</referenceTo>
    <relationshipLabel>Architecture Strategies</relationshipLabel>
    <relationshipName>Architecture_Strategies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>