force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Assumptions__c.field-meta.xml
<CustomField>
    <fullName>aecm__Assumptions__c</fullName>
    <description>Container for strategy assumptions.</description>
    <inlineHelpText>Provide key assumptions relating to this startegy.</inlineHelpText>
    <label>Assumptions</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>