force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Create_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Create_Date__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>