force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Diagram_URL__c.field-meta.xml
<CustomField>
    <fullName>aecm__Diagram_URL__c</fullName>
    <description>Link to a web based or intranet diagram.</description>
    <inlineHelpText>Link to a web based diagram, i.e. LucidCharts.</inlineHelpText>
    <label>Diagram URL</label>
    <type>Url</type>
</CustomField>