force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Enterprise_Architect__c.field-meta.xml
<CustomField>
    <fullName>aecm__Enterprise_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enterprise Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Architecture Strategies</relationshipLabel>
    <relationshipName>Architecture_Strategies</relationshipName>
    <type>Lookup</type>
</CustomField>