force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__IT_Owner__c.field-meta.xml
<CustomField>
    <fullName>aecm__IT_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IT Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Architecture Strategies (IT Owner)</relationshipLabel>
    <relationshipName>Architecture_Strategies2</relationshipName>
    <type>Lookup</type>
</CustomField>