force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Overview__c.field-meta.xml
<CustomField>
    <fullName>aecm__Overview__c</fullName>
    <inlineHelpText>Provide a brief overview of this strategy.</inlineHelpText>
    <label>Overview</label>
    <type>TextArea</type>
</CustomField>