force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Primary_Business_Stakeholder__c.field-meta.xml
<CustomField>
    <fullName>aecm__Primary_Business_Stakeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Business Stakeholder</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Architecture_Strategies3</relationshipName>
    <type>Lookup</type>
</CustomField>