force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Problem_Statement__c.field-meta.xml
<CustomField>
    <fullName>aecm__Problem_Statement__c</fullName>
    <description>Contains a description of the over all reason for the strategy.</description>
    <inlineHelpText>Describe the details for why this strategy is needed.</inlineHelpText>
    <label>Problem Statement</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>