force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Solution__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution__c</fullName>
    <description>Contains a description for how the problem related to this strategy will be solved.</description>
    <inlineHelpText>Explain how the strategy problem will be solved.</inlineHelpText>
    <label>Solution</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>