force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Architect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Architect</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Architecture Strategies (Solution Architect)</relationshipLabel>
    <relationshipName>Architecture_Strategies1</relationshipName>
    <type>Lookup</type>
</CustomField>