force-app/main/default/objects/aecm__Architecture_Strategy__c/fields/aecm__Stages__c.field-meta.xml
<CustomField>
    <fullName>aecm__Stages__c</fullName>
    <label>Stages</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Problem Validation</fullName>
            </value>
            <value>
                <fullName>Conceptualizing</fullName>
            </value>
            <value>
                <fullName>High-Level Design</fullName>
            </value>
            <value>
                <fullName>Socializing</fullName>
            </value>
            <value>
                <fullName>Vetting</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>